tests/NormalTests/paczka1/fuzzy1/24696885.err
Error in line 2: J5MYFdZQA S239 85,1
Error in line 8: m2xyM S239 86,0
Error in line 12: dIRsSmG7PwE S199 92,8
Error in line 11: m2xyM S583 87,5
Error in line 21: m2xyM S199 77,2
Error in line 18: A711 S583 38,1
Error in line 32: A711 A711 11,6
Error in line 36: A711 A711 4,3
Error in line 23: J5MYFdZQA S199 222,0
